Add javadoc, rationalize option parsing